@@ -34,9 +34,7 @@ It also allows you to install mods by dragging and dropping their files.</Descri
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>gtk-sharp-2.0</Package>
-    </Reference>
+    <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -48,23 +46,18 @@ It also allows you to install mods by dragging and dropping their files.</Descri
     <Reference Include="System.Net" />
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>glade-sharp-2.0</Package>
     </Reference>
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>glib-sharp-2.0</Package>
     </Reference>
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>gtk-sharp-2.0</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -126,6 +119,9 @@ It also allows you to install mods by dragging and dropping their files.</Descri
     <Compile Include="gtk-gui\MultiMC.EditNotesDialog.cs" />
     <Compile Include="GUI\ConsoleWindow.cs" />
     <Compile Include="gtk-gui\MultiMC.ConsoleWindow.cs" />
+    <Compile Include="StyleUtils.cs" />
+    <Compile Include="ProblemDetection\MinecraftProblem.cs" />
+    <Compile Include="ProblemDetection\Problems.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -134,6 +130,7 @@ It also allows you to install mods by dragging and dropping their files.</Descri
     <Folder Include="Task\" />
     <Folder Include="GUI\" />
     <Folder Include="icons\" />
+    <Folder Include="ProblemDetection\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README" />
